--- a/index.html
+++ b/index.html
@@ -101,8 +101,10 @@
                 alt="Photo of Mark Guerrero"
                 width="264"
               />
-              <h3 class="section-our-team-header-list">Mark Guerrero</h3>
-              <p class="section-our-team-paragraph">Product Designer</p>
+              <div class="employee">
+                <h3 class="section-our-team-header-list">Mark Guerrero</h3>
+                <p class="section-our-team-paragraph">Product Designer</p>
+              </div>
             </li>
             <li class="section-our-team-item">
               <img
@@ -111,8 +113,10 @@
                 alt="Photo of Tom Ford"
                 width="264"
               />
-              <h3 class="section-our-team-header-list">Tom Ford</h3>
-              <p class="section-our-team-paragraph">Frontend Developer</p>
+              <div class="employee">
+                <h3 class="section-our-team-header-list">Tom Ford</h3>
+                <p class="section-our-team-paragraph">Frontend Developer</p>
+              </div>
             </li>
             <li class="section-our-team-item">
               <img
@@ -121,8 +125,10 @@
                 alt="Photo of Camila Garcia"
                 width="264"
               />
-              <h3 class="section-our-team-header-list">Camila Garcia</h3>
-              <p class="section-our-team-paragraph">Marketing</p>
+              <div class="employee">
+                <h3 class="section-our-team-header-list">Camila Garcia</h3>
+                <p class="section-our-team-paragraph">Marketing</p>
+              </div>
             </li>
             <li class="section-our-team-item">
               <img
@@ -131,8 +137,10 @@
                 alt="Photo of Daniel Wilson"
                 width="264"
               />
-              <h3 class="section-our-team-header-list">Daniel Wilson</h3>
-              <p class="section-our-team-paragraph">UI Designer</p>
+              <div class="employee">
+                <h3 class="section-our-team-header-list">Daniel Wilson</h3>
+                <p class="section-our-team-paragraph">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -148,8 +156,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="section-portfolio-header-list">Banking App</h3>
-              <p class="section-portfolio-paragraph">App</p>
+              <div class="name-app">
+                <h3 class="section-portfolio-header-list">Banking App</h3>
+                <p class="section-portfolio-paragraph">App</p>
+              </div>
             </li>
             <li class="section-portfolio-item">
               <img
@@ -158,8 +168,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="section-portfolio-header-list">Cashless Payment</h3>
-              <p class="section-portfolio-paragraph">Marketing</p>
+              <div class="name-app">
+                <h3 class="section-portfolio-header-list">Cashless Payment</h3>
+                <p class="section-portfolio-paragraph">Marketing</p>
+              </div>
             </li>
             <li class="section-portfolio-item">
               <img
@@ -168,8 +180,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="section-portfolio-header-list">Meditation App</h3>
-              <p class="section-portfolio-paragraph">App</p>
+              <div class="name-app">
+                <h3 class="section-portfolio-header-list">Meditation App</h3>
+                <p class="section-portfolio-paragraph">App</p>
+              </div>
             </li>
             <li class="section-portfolio-item">
               <img
@@ -178,8 +192,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="section-portfolio-header-list">Taxi Service</h3>
-              <p class="section-portfolio-paragraph">Marketing</p>
+              <div class="name-app">
+                <h3 class="section-portfolio-header-list">Taxi Service</h3>
+                <p class="section-portfolio-paragraph">Marketing</p>
+              </div>
             </li>
             <li class="section-portfolio-item">
               <img
@@ -188,10 +204,12 @@
                 width="360"
                 height="300"
               />
-              <h3 class="section-portfolio-header-list">
-                Screen Illustrations
-              </h3>
-              <p class="section-portfolio-paragraph">Design</p>
+              <div class="name-app">
+                <h3 class="section-portfolio-header-list">
+                  Screen Illustrations
+                </h3>
+                <p class="section-portfolio-paragraph">Design</p>
+              </div>
             </li>
             <li class="section-portfolio-item">
               <img
@@ -200,8 +218,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="section-portfolio-header-list">Online Courses</h3>
-              <p class="section-portfolio-paragraph">Marketing</p>
+              <div class="name-app">
+                <h3 class="section-portfolio-header-list">Online Courses</h3>
+                <p class="section-portfolio-paragraph">Marketing</p>
+              </div>
             </li>
           </ul>
         </div>
