--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       </section>
       <section class="section-content">
         <div class="container">
-          <h2 class="section-content-name">Features</h2>
+          <h2 class="visually-hidden">Features</h2>
           <ul class="section-content-list">
             <li class="section-content-list-item">
               <h3 class="section-content-list-header">Strategy</h3>
