--- a/index.html
+++ b/index.html
@@ -27,9 +27,11 @@
             >Web<span class="raleway">Studio</span></a
           >
           <ul class="header-menu-list">
-            <li><a class="header-navigation" href="./index.html">Studio</a></li>
-            <li><a class="header-navigation" href="">Portfolio</a></li>
-            <li><a class="header-navigation" href="">Contacts</a></li>
+            <li><a class="header-navigation-item" href="">Portfolio</a></li>
+            <li><a class="header-navigation-item" href="">Contacts</a></li>
+            <li>
+              <a class="header-navigation-item" href="./index.html">Studio</a>
+            </li>
           </ul>
         </nav>
         <address class="address">
